--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 			<div class="container max-w-screen-sm mx-auto p-4">
 				<!-- category form -->
 				<section>
-					<div class="mb-6" id="category-wrapper">
+					<div class="mb-6 hidden" id="category-wrapper">
 						<h2 class="text-xl text-slate-300 font-bold mb-2">
 							Add New category
 						</h2>
@@ -164,7 +164,21 @@
 						name="sort-products"
 						id="sort-products"
 						class="bg-transparent text-slate-400 rounded-xl"
-					></select>
+					>
+						<option
+							class="bg-slate-500 text-slate-300"
+							value="newest"
+							selected
+						>
+							newest
+						</option>
+						<option
+							class="bg-slate-500 text-slate-300"
+							value="oldest"
+						>
+							oldest
+						</option>
+					</select>
 				</div>
 				<div id="products-list" class="overflow-x-auto"></div>
 				<div class="h-20"></div>
